--- a/gopl.ipynb
+++ b/gopl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,30 +11,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1°F = -17°C, 1°C = 34°F\r\n",
-      "1 ft = 0.3 m, 1 m = 3.3 ft\r\n",
-      "1 lbs = 0.45 lbs, 1 lbs = 2.2 lbs\r\n",
-      "\r\n",
-      "2°F = -17°C, 2°C = 36°F\r\n",
-      "2 ft = 0.61 m, 2 m = 6.6 ft\r\n",
-      "2 lbs = 0.91 lbs, 2 lbs = 4.4 lbs\r\n",
-      "\r\n",
-      "3°F = -16°C, 3°C = 37°F\r\n",
-      "3 ft = 0.91 m, 3 m = 9.8 ft\r\n",
-      "3 lbs = 1.4 lbs, 3 lbs = 6.6 lbs\r\n",
-      "\r\n"
+      "2020/05/30 10:57:44 expected <number><unit>, got \"1\"\n",
+      "exit status 1\n"
      ]
     }
    ],
    "source": [
     "!go run chap2/ex2/*.go 1 2 3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "goos: linux\n",
+      "goarch: amd64\n",
+      "pkg: github.com/bravmi/gopl/chap2/popcount\n",
+      "BenchmarkPopCountTable-8       \t1000000000\t         0.513 ns/op\n",
+      "BenchmarkPopCountTableLoop-8   \t77044416\t        14.5 ns/op\n",
+      "BenchmarkPopCountShift-8       \t23359890\t        49.8 ns/op\n",
+      "BenchmarkPopCountClear-8       \t1000000000\t         0.508 ns/op\n",
+      "PASS\n",
+      "ok  \tgithub.com/bravmi/gopl/chap2/popcount\t3.493s\n"
+     ]
+    }
+   ],
+   "source": [
+    "!go test ./chap2/popcount -bench=."
    ]
   }
  ],
